--- a/assignment/index.html
+++ b/assignment/index.html
@@ -612,8 +612,7 @@ APIs   Using the NCBI API, look for papers that show up under the term &ldquo;sa
       <div class="article-style">
         
           Learning goals In this lab, you are expected to learn/put in practice the following skills:
- Forking a repository on GitHub Git workflow clone/commit/push Using pull requests (PR)  The last bit of the lab will deal with GitHub Classrooms. While this is not a fundamental tool for academia/industry, we will be using this tool throughout the course, meaning that your grade will depend on it :).
-Updating a single repo One of the most common tasks that people use git for is for collaborating.
+ Forking a repository on GitHub Git workflow clone/commit/push Using pull requests (PR)  Updating a single repo One of the most common tasks that people use git for is for collaborating. While in general team members organize such that there is no overlapping editing of the files, git is (usually) smart enough to avoid clashes when multiple edits are done in the same document1.
         
       </div>
     </div>
