deploy: fc5e0a85831dfc8031a23127e0468f6058f1f7dd

--- a/assignment/03-hw1/index.html
+++ b/assignment/03-hw1/index.html
@@ -30,7 +30,7 @@
   
     
   
-  <meta name="description" content="Due Date This assignment is due by midnight Pacific Time, September 22nd, 2023.
+  <meta name="description" content="Due Date This assignment is due by midnight Pacific Time, September 29th, 2023.
 Learning Goals  Download, read, and get familiar with an external dataset. Step through the EDA &ldquo;checklist&rdquo; presented in class Practice making exploratory plots  Assignment Description We will work with air pollution data from the U.S. Environmental Protection Agency (EPA). The EPA has a national monitoring network of air pollution sites that The primary question you will answer is whether daily concentrations of PM$_{2.">
 
   
@@ -246,7 +246,7 @@ Learning Goals  Download, read, and get familiar with an external dataset. Step 
   <meta property="og:site_name" content="Introduction to Health Data Science - PM 566">
   <meta property="og:url" content="https://uscbiostats.github.io/PM566/assignment/03-hw1/">
   <meta property="og:title" content="Assignment 01 - Exploratory Data Analysis | Introduction to Health Data Science - PM 566">
-  <meta property="og:description" content="Due Date This assignment is due by midnight Pacific Time, September 22nd, 2023.
+  <meta property="og:description" content="Due Date This assignment is due by midnight Pacific Time, September 29th, 2023.
 Learning Goals  Download, read, and get familiar with an external dataset. Step through the EDA &ldquo;checklist&rdquo; presented in class Practice making exploratory plots  Assignment Description We will work with air pollution data from the U.S. Environmental Protection Agency (EPA). The EPA has a national monitoring network of air pollution sites that The primary question you will answer is whether daily concentrations of PM$_{2."><meta property="og:image" content="https://uscbiostats.github.io/PM566/img/social-image.png">
   <meta property="twitter:image" content="https://uscbiostats.github.io/PM566/img/social-image.png"><meta property="og:locale" content="en-us">
   
@@ -526,7 +526,7 @@ Learning Goals  Download, read, and get familiar with an external dataset. Step 
 
     <div class="article-style">
       <h1 id="due-date">Due Date</h1>
-<p>This assignment is due by midnight Pacific Time, September 22nd, 2023.</p>
+<p>This assignment is due by midnight Pacific Time, September 29th, 2023.</p>
 <h1 id="learning-goals">Learning Goals</h1>
 <ul>
 <li>Download, read, and get familiar with an external dataset.</li>
