--- a/assignment/index.html
+++ b/assignment/index.html
@@ -545,7 +545,7 @@ Data Wrangling You will need to download two datasets from https://github.com/US
       <h2><a href="/PM566/assignment/03-hw1/" >Assignment 01 - Exploratory Data Analysis</a></h2>
       <div class="article-style">
         
-          Due Date This assignment is due by midnight Pacific Time, September 22nd, 2023.
+          Due Date This assignment is due by midnight Pacific Time, September 29th, 2023.
 Learning Goals  Download, read, and get familiar with an external dataset. Step through the EDA &ldquo;checklist&rdquo; presented in class Practice making exploratory plots  Assignment Description We will work with air pollution data from the U.S. Environmental Protection Agency (EPA). The EPA has a national monitoring network of air pollution sites that The primary question you will answer is whether daily concentrations of PM$_{2.
         
       </div>
