--- a/assignment/05-hw2/index.html
+++ b/assignment/05-hw2/index.html
@@ -549,6 +549,7 @@ combined, you will need to do the following:</p>
 the number of rows. Make sure it matches.</p>
 <p>In the case of missing values, impute data using the average amongst
 individuals with the same values for the &ldquo;male&rdquo; and &ldquo;hispanic&rdquo; variables.
+For categorical variables, take the mode.
 If you are interested (and feel adventurous)
 in the theme of Data Imputation, take a look at this paper on &ldquo;Multiple
 Imputation&rdquo;
